--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "tests"
   ],
   "dependencies": {
+    "jquery": "~1.9.0",
     "ember": "~1.7.0",
     "ember-data": "1.0.0-beta.8",
     "bootstrap": "~3.2.0"
